--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,10 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+SESSION_COOKIE=spot_guest_session
+ADMIN_SESSION_COOKIE=spot_admin_session
+BARISTA_SESSION_COOKIE=spot_barista_session
+
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
