--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ SESSION_LIFETIME=120
 SESSION_COOKIE=spot_guest_session
 ADMIN_SESSION_COOKIE=spot_admin_session
 BARISTA_SESSION_COOKIE=spot_barista_session
+HOST_SESSION_COOKIE=spot_host_session
 
 MEMCACHED_HOST=127.0.0.1
 
